Fix Big Map
The big map now covers the entire screen and disables overflow on the body element when active

--- a/src/components/ui/LocationMap/LocationMap.module.scss
+++ b/src/components/ui/LocationMap/LocationMap.module.scss
@@ -46,23 +46,23 @@
     height: 100%;
 }
 
+.mapBigDisplayWrapper {
+    position: fixed;
+    inset: 0;
+}
+
 .mapBigDisplay {
     width: 70%;
     height: 90%;
-
     margin: auto;
     z-index: 9999;
-    position: absolute;
-    top: 0; 
-    left: 0; 
-    bottom: 0; 
-    right: 0;
+    position: fixed;
+    inset: 0;
 }
 
 .mapBigDisplayOverlay {
-    position: absolute;
+    position: fixed;
+    z-index: 9999;
     inset: 0;
-    width: 100vw;
-    height: 100vh;
     background-color: rgba(0, 0, 0, 0.6);
 }
